--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     {
         dockerfile {
             filename 'Dockerfile'
-            dir '/home/system/mydocker/'
+            dir './mydocker/'
             label 'zip-job-docker'
            args "-u root --network system_default -e 'VERSION=${env.VERSION}'"
         }
@@ -23,7 +23,7 @@ pipeline {
             steps {
 
                  script {
-                    def server = Artifactory.newServer url: 'http://10.101.0.137:8081/artifactory/', username: 'super-user', password: 'Qw12856!'
+                    def server = Artifactory.newServer url: 'http://artifactory-tlv:8081/artifactory/', username: 'super-user', password: 'Qw12856!'
                     def uploadSpec = """{
                     "files": [
                     {
